added about section and changed button color

--- a/NEW PROJECT/my new project.html
+++ b/NEW PROJECT/my new project.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My new project</title>
+    <title>My Simple Webpage</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Webpage</h1>
-    <p>My name is Salim Bonaya</p>
-    <p>This is my first project on HTML and CSS.</p>
+    <h1>Welcome to My new Webpage project</h1>
+    <p>My simple HTML and CSS project</p>
     <button>Click Me</button>
+
+
+<section>
+    <h2>About this project</h2>
+    <p>This is my demonstration of using Git and GitHub for version control.</p>
+</section>
+
+
+
+
+
 </body>
 </html>
