--- a/NEW PROJECT/styles.css.html
+++ b/NEW PROJECT/styles.css.html
@@ -5,13 +5,20 @@ body {
 }
 
 button {
-    background-color: blue;
+    background-color: yellow;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 10px 15px;
     cursor: pointer;
 }
 
 button:hover {
     background-color: darkblue;
+}
+button {
+    background-color: green; /* Changed from blue to green */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
 }
