--- a/NEW PROJECT/my new project.html
+++ b/NEW PROJECT/my new project.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Webpage</title>
+    <title>My Webpage</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Welcome to My new Webpage project</h1>
-    <p>My simple HTML and CSS project</p>
-    <button>Click Me</button>
+    <h1>Welcome to my new Project HTML with CSS</h1>
+    <p>HTML and CSS project.</p>
+    <button>CLICK HERE TO JOIN</button>
+
+
+
+
+
+
+
+
 
 
 
