--- a/NEW PROJECT/newproject.html
+++ b/NEW PROJECT/newproject.html
@@ -14,6 +14,10 @@
     <button>CLICK HERE TO JOIN</button>
 
 
+<section>
+    <h2>About this project</h2>
+    <p>This is my demonstration of using Git and GitHub for version control.</p>
+</section>
 
 
 
