--- a/mashujaa-day.html
+++ b/mashujaa-day.html
@@ -19,7 +19,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#courses">Courses</a></li>
                 <li><a href="#career">Career</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#contacts">Contact Us</a></li>
             </ul>
         </nav>
     </header>
